# cfg-match

./: Cargo.toml  README.md
.vim/: template.rs
cfg-match-codegen/: Cargo.toml
cfg-match-codegen/src/: arm.rs  generic.rs  lib.rs
examples/: features.rs  os.rs
src/: lib.rs
