[package]
name = "cfg-match-codegen"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/cfg-match.git"
homepage = "https://github.com/SOF3/cfg-match"
readme = "README.md"
description = "Codegen crate for cfg-match"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
